--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,10 @@ cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
-script: "./gradlew clean build"
+script:
+  - "chmod +x ./gradlew"
+  - "./gradlew clean build"
+
 
 # CI 실행 완료 시 메일로 알람
 notifications:
